test/bindnic.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testnginx4
  annotations:
    hostnic.network.kubesphere.io/type: passthrough
  labels:
    env: test
spec:
  containers:
    - name: nginx
      image: nginx:latest
      tty: true
